# pycodedownload

./: .gitignore  .pre-commit-config.yaml  README.md  extensions.yaml  pyproject.toml  requirements.txt
src/pycodedownload/: api.py  blacklist.py  cli.py  compatibility.py  config.py  dependency.py  download.py  downloader.py  exceptions.py  models.py  validators.py
src/pycodedownload/models/: filter_type.py  flags.py
